<resources>
    <string name="app_name">The_Grad_project</string>
    <string name="artissimo">artissimo</string>
    <string name="search_icon">search</string>
    <string name="what_art_do">What art do you like?</string>
    <string name="painting">Painting</string>
    <string name="explore_art">Explore art through your phone</string>
    <string name="recommended">Recommended for you</string>
    <string name="the_starry_">
The Starry Night is an oil on canvas painting by Dutch Post-Impressionist painter Vincent van Gogh. Painted in June 1889, it depicts the view from the east-facing window of his asylum room at Saint-R\u00C3\u00A9my-de-Provence, just before sunrise, with the addition of an imaginary village. \n\nIt has been in the permanent collection of the Museum of Modern Art in New York City since 1941, acquired through the Lillie P. Bliss Bequest. Widely regarded as Van Gogh\'s magnum opus, The Starry Night is one of the most recognized paintings in Western art.
    </string>
    <string name="title2">Listen to history</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="duration">duration</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_account">My account</string>
    <string name="light_mode">Light mode</string>
    <string name="achievements">Achievements</string>
    <string name="payment_methods">Payment methods</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="about">About</string>
    <string name="signout">Sign out</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="camera">Camera</string>
    <string name="exhibits">Exhibits</string>
    <string name="profile">Profile</string>
    <string name="menu_home">Menu home</string>
</resources>